--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
 
     "icons":{
         "80":"favicon.png"
@@ -8,12 +8,14 @@
     "description": "Github EntERtaiNment TooL",
     "version": "1.0",
   
-    "browser_action": {
+    "action": {
      "default_popup": "kong.html"
     },
     "permissions": [
-        "tabs",
-        "http://*/*",
-        "https://*/*"
+        "tabs","scripting", "activeTab"
+    ],
+    "host_permissions": [
+        "<all_urls>"
     ]
+
   }
